// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test action defiend after alias 1`] = `
Array [
  Object {
    "entities": Array [],
    "intent": "arg",
    "text": "asdf",
  },
]
`;

exports[`test action referencing action works as text 1`] = `
Array [
  Object {
    "entities": Array [],
    "intent": "asdf",
    "text": "test %[arg]",
  },
]
`;

exports[`test action referencing undefined alias 1`] = `[Error: Undefined alias alias]`;

exports[`test action referencing undefined argument 1`] = `[Error: Undefined argument arg]`;

exports[`test action with two arguments 1`] = `
Array [
  Object {
    "entities": Array [
      Object {
        "end": 23,
        "entity": "lights",
        "start": 17,
        "value": "lights",
      },
      Object {
        "end": 27,
        "entity": "switch",
        "start": 24,
        "value": "off",
      },
    ],
    "intent": "lightChange",
    "text": "Hey Bot turn the lights off",
  },
  Object {
    "entities": Array [
      Object {
        "end": 23,
        "entity": "lights",
        "start": 17,
        "value": "lights",
      },
      Object {
        "end": 26,
        "entity": "switch",
        "start": 24,
        "value": "on",
      },
    ],
    "intent": "lightChange",
    "text": "Hey Bot turn the lights on",
  },
  Object {
    "entities": Array [
      Object {
        "end": 22,
        "entity": "lights",
        "start": 17,
        "value": "luces",
      },
      Object {
        "end": 26,
        "entity": "switch",
        "start": 23,
        "value": "off",
      },
    ],
    "intent": "lightChange",
    "text": "Hey Bot turn the luces off",
  },
  Object {
    "entities": Array [
      Object {
        "end": 22,
        "entity": "lights",
        "start": 17,
        "value": "luces",
      },
      Object {
        "end": 25,
        "entity": "switch",
        "start": 23,
        "value": "on",
      },
    ],
    "intent": "lightChange",
    "text": "Hey Bot turn the luces on",
  },
]
`;

exports[`test action without correct identation error 1`] = `[SyntaxError: Expected "%", "@", "\\n", "~", correct indentation, or end of input but " " found.]`;

exports[`test action without sentences error 1`] = `[SyntaxError: Expected "\\n" or correct indentation but end of input found.]`;

exports[`test empty parser error 1`] = `[SyntaxError: Expected "%", "@", "\\n", or "~" but end of input found.]`;

exports[`test no actions error 1`] = `[Error: No actions found]`;

exports[`test readme example 1`] = `
Array [
  Object {
    "entities": Array [
      Object {
        "end": 27,
        "entity": "switch",
        "start": 24,
        "value": "off",
      },
    ],
    "intent": "lightChange",
    "text": "Hey Bot turn the lights off",
  },
  Object {
    "entities": Array [
      Object {
        "end": 26,
        "entity": "switch",
        "start": 24,
        "value": "on",
      },
    ],
    "intent": "lightChange",
    "text": "Hey Bot turn the lights on",
  },
]
`;
